Fix the titles spelling

--- a/intex.HTML
+++ b/intex.HTML
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Game of Tik-Tak-To</title>
+    <title>My Game of Tic-Tac-Toe</title>
 </head>
 <body>
-    <h1>Tik-Tak-To</h1>
+    <h1>Tic-Tac-Toe</h1>
 
     <table id="container" border="1" cellspacing="12">
     </table>
