--- a/intex.HTML
+++ b/intex.HTML
@@ -10,6 +10,8 @@
 
     <table id="container" border="1" cellspacing="12">
     </table>
+
+    <p id="message"></p>
  </body>
 <script>
     // ========================================================
@@ -102,6 +104,16 @@
                 const cellValue = game[rowNumber][colNumber]
                 if (cellValue !== null) {
                     td.innerText = cellValue
+                }
+
+                const message = document.getElementById("message");
+
+                message.style.fontSize = "90px"
+
+                if (turn == "o") {
+                    message.innerHTML = "It is O's turn"
+                } else {
+                    message.innerHTML = "It is X's turn"
                 }
 
                 tr.appendChild(td)
